# first_repo

./: Dockerfile  adition  adition2  calcul.py  client.py  config.ini  diagram.drawio  home.py  home9.py  insert_data.py  main.py  models.py  my_select.py  query_10.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  sashka.py  seeds.py  sort_out.py  sorted.py  storage.py  whisper.ipynb
assistant/: Dockerfile  main.py  pyproject.toml
clean_folder/: setup.py
clean_folder/clean_folder/: clean.py
conf/: models.py
dictionaries/: sashka.py  usa  weather
home10/: .env  db.sqlite3  manage.py
home10/home10/: asgi.py  settings.py  urls.py  wsgi.py
home10/quotes/: forms.py  models.py  urls.py  utils.py  views.py
home10/quotes/migrations/: 0001_initial.py
home10/quotes/templates/quotes/: author.html  base.html  biography.html  index.html  quote.html
home10/quotes/templatetags/: extract.py
home10/users/: forms.py  urls.py  views.py
home10/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  signup.html
home10/util/: add_quotes.py  migration.py  quotes.json
migrations/: env.py
migrations/versions/: 9d6dce865d2f_init.py  f1c0ef6cdbc1_.py
part1/: models.py  seed.py  start.py
part2/: consumer.py  model.py  producer.py
project_group_9-main/: Dockerfile  pyproject.toml
storage/: data.json
