[tool.poetry]
name = "helper-bot"
version = "0.1.0"
description = "assistant in your book"
authors = ["Oleksandr190378 <147439788+Oleksandr190378@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prompt-toolkit = "3.0.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
